增加物流员工账号类型枚举，修复审核列表筛选

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GlobalBLL\GlobalBLL.csproj">
+      <Project>{8391097a-dcf2-425e-b09f-0c07dfdcc74c}</Project>
+      <Name>GlobalBLL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{ad983845-5fd1-4470-8117-8f016277b941}</Project>
       <Name>Model</Name>
