--- a/Logistics/Web.config
+++ b/Logistics/Web.config
@@ -20,7 +20,7 @@
     </httpModules>
   </system.web>
   <connectionStrings>
-    <add connectionString="Data Source=.;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />
+    <add connectionString="Data Source=192.168.0.200;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />
   </connectionStrings>
   <system.codedom>
     <compilers>
