--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DAL\LC_Position.cs" />
     <Compile Include="DAL\LC_Region.cs" />
     <Compile Include="DAL\LC_User.cs" />
+    <Compile Include="DAL\LC_UserBindLogisticsList.cs" />
     <Compile Include="DAL\LC_Vehicle.cs" />
     <Compile Include="DAL\w_address_basic_data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
