--- a/Logistics/Web.config
+++ b/Logistics/Web.config
@@ -23,6 +23,9 @@
     <!--<add connectionString="Data Source=192.168.0.200;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />-->
     <add connectionString="Data Source=.;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />
   </connectionStrings>
+  <appSettings>
+    <add key="HOST" value="http://localhost:23445/"/>
+  </appSettings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
