--- a/Logistics/Web.config
+++ b/Logistics/Web.config
@@ -21,10 +21,10 @@
   </system.web>
   <connectionStrings>
     <!--<add connectionString="Data Source=192.168.0.200;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />-->
-    <add connectionString="Data Source=.;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />
+    <add connectionString="Data Source=.;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />
   </connectionStrings>
   <appSettings>
-    <add key="HOST" value="http://localhost:23445/"/>
+    <add key="HOST" value="http://wl.mikiboss.com/"/>
   </appSettings>
   <system.codedom>
     <compilers>
